# vargrest

./: .gitignore  CHANGELOG.md  pyproject.toml
.github/workflows/: on-push-main.yml
vargrest/: api.py
vargrest/auxiliary/: curvefit.py  sliceplot.py
vargrest/variogramdata/: variogramdata.py
vargrest/variogramestimation/: variogramestimation.py
vargrest/variogramresults/: summary.py
