[tool.poetry]
name = "vargrest"
version = "1.0.3"
description = "Variogram estimation for ResQml models converted by nrresqml"
authors = ["Norwegian Computing Center"]
license = "GPLv3"
classifiers = [
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.8",
        "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
        "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.8"
nrresqml = {git = "https://github.com/equinor/nrresqml", rev = "v1.0.3"}
scipy = "~1.9.3"
numpy = "~1.21.0"
h5py = "~3.8.0"
matplotlib = "~3.7.2"
tqdm = "~4.66.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"